--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="./styles.css" rel="stylesheet"/>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.1/socket.io.js"></script>
+    <link href="./styles.css" rel="stylesheet" />
     <title>Chat Application</title>
 </head>
+
 <body>
-    <h1>web socket</h1>
+    <div id="chat">
+        <div id="chat-window"></div>
+    </div>
+    <script src="./chat.js"></script>
 </body>
+
 </html>
