Emitting Chat events & Chat Window Design #Day94

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,12 @@
 
 <body>
     <div id="chat">
-        <div id="chat-window"></div>
+        <div id="chat-window">
+            <div id="output"></div>
+        </div>
+        <input id="handle" type="text" placeholder="Handle" />
+        <input id="message" type="text" placeholder="Message" />
+        <button id="send">Send</button>
     </div>
     <script src="./chat.js"></script>
 </body>
